--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     font-family: 'Poppins';
 }
@@ -250,3 +252,59 @@ h1, .lead {
     border-radius: 30px !important;
     padding: 12px 40px;
 }
+
+/* Login Page */
+.login-user .right {
+    width: 50%;
+    float: left;
+    padding: 120px;
+    background: linear-gradient(62.78deg, #3B3B60 -8.76%, #5E5E9C 189.61%);
+  }
+  
+  .login-user .right .people {
+    margin-top: 100px;
+    height: 170px;
+  }
+  
+  .login-user .right .logo {
+    height: 42px;
+    margin-bottom: 100px;
+  }
+  
+  .login-user .right .btn-border {
+    border-radius: 50px;
+    padding: 12px 80px 12px 80px;
+  }
+  
+  .login-user .right .btn-google-login {
+    margin-top: 40px;
+  }
+  
+  .login-user .right .btn-google-login .icon {
+    margin-right: 8px;
+  }
+  
+  .login-user .left {
+    width: 50%;
+    min-height: 900px;
+    float: left;
+  }
+
+.form-control {
+    border: 1px solid #3B3B60 !important;
+    border-radius: 30px;
+    padding: 12px 183px 11px 30px;
+}
+
+.right h2, .right p {
+    color: #ECECF8 !important;
+}
+  
+ .login-user .left img {
+    margin-top: 200px;
+  } 
+
+  .register-btn {
+    background-color: #ECECF8 !important;
+    color: #3B3B60 !important;
+  }
