--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,10 @@ h2 {
     color: #3b3b60 !important;
 }
 
+a.card-link {
+    text-decoration: none;
+}
+
 /* navbar */
 .nav-item {
     margin-right: 40px;
@@ -68,6 +72,7 @@ h1,
     border: none !important;
     border-radius: 30px !important;
     padding: 12px 40px;
+    pointer-events: none;
 }
 
 .premium {
@@ -76,6 +81,7 @@ h1,
     border: none !important;
     border-radius: 30px !important;
     padding: 12px 40px;
+    pointer-events: none;
 }
 
 .card-title {
@@ -85,6 +91,27 @@ h1,
 .card-text {
     color: #7e8cac;
     font-weight: 200;
+}
+
+.cover a {
+    transition: all 0.8s;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(1, 3, 45, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.cover:hover a {
+    opacity: 1;
 }
 
 .cardhead a {
